# Advanced-YouTube-Downloader

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  SCHEDULER_README.md  SECURITY.md  SUPPORT.md  __init__.py  app.py  docker-compose.yml  pyproject.toml  quick_status_check.py  requirements-dev.txt  requirements.txt  run_app.bat  scheduler_service.py  setup.cfg  setup.sh  start_with_scheduler.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml
docs/: API.md  CONTRIBUTING.md  INSTALLATION.md  USER_GUIDE.md
scripts/: README.md  run_app.bat  setup.sh  start_with_scheduler.bat
tests/: README.md  test_basic.py
